增加密码登录方式，改善ui界面
